Fix:added responsiveness to cryptojournal.

--- a/src/stylesheets/cryptojournal.module.css
+++ b/src/stylesheets/cryptojournal.module.css
@@ -73,5 +73,11 @@
     .buttons *{
         margin-top: 5%;
     }
+
+    .subContainer{
+        display: flex;
+        justify-content: center;
+    }
+
   }
   
