--- a/src/stylesheets/cryptojournal.module.css
+++ b/src/stylesheets/cryptojournal.module.css
@@ -76,6 +76,9 @@
 
     .subContainer{
         display: flex;
+        flex-wrap: wrap;
+        width: 80%;
+        margin-top: 2%;
         justify-content: center;
     }
 
