Fix:button responsiveness.

--- a/src/stylesheets/cryptojournal.module.css
+++ b/src/stylesheets/cryptojournal.module.css
@@ -82,5 +82,10 @@
         justify-content: center;
     }
 
+    .addjournal{
+        font-size: 12pt;
+        font-weight: 200;
+     }
+
   }
   
