--- a/src/stylesheets/cryptojournal.module.css
+++ b/src/stylesheets/cryptojournal.module.css
@@ -73,18 +73,23 @@
     .buttons *{
         margin-top: 5%;
     }
-
     .subContainer{
-        display: flex;
-        flex-wrap: wrap;
+        padding-top: 0;
+        grid-template-columns: 95%;
+        grid-template-rows: 30%;
         justify-content: center;
+        row-gap: 8%;
+        column-gap: 2%;
     }
-
     .addjournal{
+        width: 100%;
         height: 60%;
-        font-size: 12pt;
-        font-weight: 200;
+        background-color: rgb(255, 236, 127);
+        font-size: 8pt;
+        font-weight: 700;
      }
-
-  }
+     .journalContainerRed, .journalContainerGreen{
+        font-size: 18pt;
+     }
+}
   
