--- a/src/stylesheets/navbar.module.css
+++ b/src/stylesheets/navbar.module.css
@@ -1,7 +1,18 @@
   
 .brand{
   font-weight: 700;
+  color: beige;
 }
+
+.items{
+  color: aliceblue;
+}
+
+.items:hover{
+  color: aqua;
+}
+
+
 
   
   
