--- a/src/stylesheets/journalentry.module.css
+++ b/src/stylesheets/journalentry.module.css
@@ -1,15 +1,15 @@
 .entryContainer{
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     margin-top: 5%;
 }
 
 .journalDetails{
     width: fit-content;
-    height: 70%;
+    height: max-content;
     background-color: bisque;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     text-align:left;
