--- a/src/stylesheets/journalentry.module.css
+++ b/src/stylesheets/journalentry.module.css
@@ -8,7 +8,7 @@
 }
 
 .journalDetails{
-    width: fit-content;
+    width: 100%;
     height: max-content;
     background-color: bisque;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
